<resources>
    <string name="app_name" translatable="false">Discover</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_user">User</string>
    <string name="title_map">Map</string>
    <string name="title_support">Support</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>

    <string name="contact_on_failure">Unable to update data</string>
    <string name="contact_follow">Subscription issued</string>
    <string name="contact_unfollow">Subscription canceled</string>

    <string name="followers_2_4">Followers</string>
    <string name="followers_1">Follower</string>
    <string name="followers_default">Followers</string>
    <string name="no_followers">No followers</string>
    <string name="unable_to_update_data">Unable to update data</string>
</resources>
