<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user"
        android:title="@string/title_user"
        />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/earth"
        android:title="@string/title_map" >

    </item>
    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/support"
        android:title="@string/title_support" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/phone_book"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />

</menu>